--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@modyfi/vite-plugin-yaml": "^1.1.0",
     "@types/node": "^20.14.7",
     "@vitejs/plugin-vue": "^5.0.5",
+    "@vue/compiler-sfc": "^3.4.31",
     "autoprefixer": "^10.4.19",
     "sass": "^1.77.6",
     "tailwindcss": "^3.4.4",
