--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -36,5 +36,5 @@
     ],
 
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "src/**/*.md"]
 }
